--- a/package.json
+++ b/package.json
@@ -54,5 +54,10 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.4.15"
+  },
+  "engines": {
+    "npm": ">=10",
+    "yarn": ">=1.22",
+    "node": ">=22"
   }
 }
